--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,13 @@ services:
     environment:
       - APP_ENV=local
     volumes:
-      - .:/var/www/html
+      - app_data:/var/www/html
 
   db:
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - "8087:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=equalify
       - MYSQL_DATABASE=equalify
@@ -26,3 +28,4 @@ services:
 
 volumes:
   db_data:
+  app_data:
